tests/slice_bad_index_oob.stderr
tests/slice_bad_index_oob.sl:4:11: error: SL2004: type mismatch
