tests/slice_bad_index_oob.sl
// Verifies slice bad index out-of-bounds.
fn main() i32 {
	var a [i32 4]
	return a[4]
}
